refactor: change content of landing page

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recaller</title>
+    <title>ScholarFlow - Decentralized Knowledge Management</title>
     <link rel="stylesheet" href="assets/css/home.css">
 </head>
 
@@ -14,7 +14,7 @@
         <nav class="nav">
             <div>
                 <ul>
-                    <li class="title">Recall</li>
+                    <li class="title">ScholarFlow</li>
                     <li class="nav-link"><a href="#pricing-section">Pricing</a></li>
                     <li class="nav-link"><a href="#faq">FAQ</a></li>
                     <li class="nav-link"><a href="#about-us">About Us</a></li>
@@ -28,17 +28,14 @@
     </div>
     <header>
         <!-- <div class="bg-image">
-                <img src="https://www.getrecall.ai/svgs/backgrounds/background-glow-nav.svg" alt="">
+                <img src="https://www.getScholarFlow.ai/svgs/backgrounds/background-glow-nav.svg" alt="">
             </div> -->
         <div class="header-content ">
-            <h1>Summarize Anything,
-                Forget Nothing
-
+            <h1>Summarize Anything, Forget Nothing
             </h1>
-            <p class="sub-header-1">Summarize content. Chat with it. Always recall it.</p>
-            <p class="sub-header-2">Transforming scattered content into a self-organizing knowledge base that grows
-                smarter the more you use
+            <p class="sub-header-1">Track, analyze, and preserve your knowledge with decentralized privacy
                 it</p>
+            <p class="sub-header-2">Turn browsing into breakthroughs with AI-powered productivity analysis and IPFS-based knowledge preservation that grows smarter the more you use it</p>
             <div>
                 <button class="btn2">Get Started</button>
             </div>
@@ -66,39 +63,38 @@
             <div class="all-price">
                 <div class="pricing-container">
                     <img src="./assets/img/leaf.png" alt="">
-                    <p class="lite">Recall Lite</p>
+                    <p class="lite">ScholarFlow Lite</p>
                     <p class="price">$0 <span>per month</span></p>
-                    <span>Your go-to read-it-later app</span>
+                    <span>Your decentralized research companion</span>
                     <button class="price-btn">Open App</button>
                     <div class="line"></div>
                     <span class="price-summary-title">Includes</span>
                     <div class="price-summary">
-                        <p> <span>✔️</span> 10 free content summaries & chats YouTube, PDFs, articles and more</p>
-                        <p><span>✔️</span>Unlimited read-it-later storage</p>
-                        <p><span>✔️</span>Unlimited personal notes</p>
-                        <p><span>✔️</span>Unlimited AI quiz questions</p>
+                        <p> <span>✔️</span> 10 free content summaries with IPFS storage</p>
+                        <p><span>✔️</span> Basic productivity tracking</p>
+                        <p><span>✔️</span> Unlimited personal notes with encryption</p>
+                        <p><span>✔️</span> Basic node visualization</p>
                     </div>
                 </div>
                 <div class="pricing-container">
                     <img src="./assets/img/leaf.png" alt="">
-                    <p class="lite">Recall Plus</p>
+                    <p class="lite">ScholarFlow Plus</p>
                     <p class="price">$7 <span>per month</span></p>
                     <span>Unlock your second brain</span>
                     <button class="price-btn premium">Upgrade</button>
                     <div class="line"></div>
                     <span class="price-summary-title">Everything in lite, plus</span>
                     <div class="price-summary">
-                        <p> <span>✔️</span> Unlimited content summaries & chats: YouTube, PDFs, articles and more</p>
-                        <p><span>🔥</span>Augmented Browsing - resurfaces related content from your knowledge base as
-                            you browse.</p>
-                        <p><span>✔️</span>Automatic categorization</p>
-                        <p><span>✔️</span>Automatic knowledge graph</p>
-                        <p><span>✔️</span>Multi-language support</p>
+                        <p> <span>✔️</span> Unlimited content summaries with permanent IPFS storage</p>
+                        <p><span>🔥</span> Advanced Productivity Analytics - Daily focus scores and insight reports</p>
+                        <p><span>✔️</span> Automatic categorization with AI</p>
+                        <p><span>✔️</span> Interactive knowledge graph visualization</p>
+                        <p><span>✔️</span> Blockchain-verified content anchoring</p>
                     </div>
                 </div>
                 <div class="pricing-container">
                     <img src="./assets/img/leaf.png" alt="">
-                    <p class="lite">Recall business</p>
+                    <p class="lite">ScholarFlow business</p>
                     <p class="price">Custom pricing </p>
                     <span>For collective company intelligence</span>
                     <button class="price-btn">Contact us</button>
@@ -115,92 +111,70 @@
         </div>
 
     </section>
-
-    <!-- FAQ -->
     <section id="faq">
         <div class="container faq-container">
             <div>
                 <div class="faq-titles">
-
                     <h2 class="faq-main-title">Frequently asked questions</h2>
                     <p class="faq-sub-title">You've got questions. We've got answers</p>
                 </div>
                 <div class="accordion">
                     <div class="accordion-item">
-                        <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Do you offer
-                                refunds?
+                        <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">How is my data stored and protected?
                             </span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>Yes, if you are not satisfied with our product within the first 30 days, we will refund
-                                you.</p>
+                            <p>Your data is stored using IPFS (InterPlanetary File System), a decentralized storage protocol. Content hashes are anchored on-chain via Solidity smart contracts. This means your data is private, permanent, and not controlled by any central authority. You can delete or export your data at any time.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Student
                                 Discounts</span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>Yes, please email us at support@getrecall.ai from your student email address for a 20%
-                                student discount.</p>
+                            <p>Yes, please email us at support@getScholarFlow.ai from your student email address for a 20%
+                                student discount. We're especially supportive of researchers and academic institutions.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <button id="accordion-button-3" aria-expanded="false"><span class="accordion-title">What is
-                                Augmented Browsing</span><span class="icon" aria-hidden="true"></span></button>
+                                Productivity Analysis?</span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>Augmented Browsing is a feature in Recall that enhances your web experience by surfacing
-                                relevant insights from your personal knowledge base in real time. As you browse, Recall
-                                automatically detects keywords and concepts on the page and shows connections to content
-                                you've previously saved—helping you instantly recall past knowledge without interrupting
-                                your workflow.
-
-
-                                Since Augmented Browsing is local-first, all processing happens on your device, ensuring
-                                privacy and security while delivering meaningful connections to what you already know.
+                            <p>Productivity Analysis is our flagship feature that transforms your browsing data into actionable insights. It includes:
+                               
+                               - Focus Score: Measure deep work vs. distracted time
+                               - Daily Digests: AI-generated summaries of your research activity
+                               - Trend Detection: Identify patterns in your productivity
+                               - Node Visualization: See connections between your research topics
+                               
+                               All analysis happens locally with pure JavaScript, so your data never leaves your device unless you explicitly save it to IPFS.
                             </p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">What are AI
-                                summaries?</span><span class="icon" aria-hidden="true"></span></button>
+                        <button id="accordion-button-4" aria-expanded="false"><span class="accordion-title">What are your AI summaries powered by?</span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>AI Summaries are generated using a mix of fine-tuned AI models and proprietary methods to
-                                generate high-quality concise or detailed summaries. The best way to create summaries is
-                                with our browser extensions on Chrome or Firefox.</p>
+                            <p>Our AI summaries are generated using a Python/Flask backend with custom NLP models. The summarization process extracts key concepts, generates concise overviews, and links related content through our knowledge graph. All summaries are stored on IPFS with their content hashes recorded on-chain for verification and permanence.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
                         <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">What content
-                                can you summarize?</span><span class="icon" aria-hidden="true"></span></button>
+                                can you analyze?</span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>Recall works best on: "YouTube Videos - we can summarize up to 10 hour long YouTube
-                                videos" , "PDFs - we can summarize up to 300 pages" , "Articles" , "Google Docs" ,
-                                "Blogs." and "Recipes" . </p>
-
-
+                            <p>ScholarFlow works best on: "Research Papers - up to 300 pages", "YouTube Videos - up to 10 hours long", "Academic Articles", "Google Docs", "Technical Blogs", and "Conference Proceedings". Our AI can identify research methodology, key findings, and connect them to your existing knowledge base.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">What
+                        <button id="accordion-button-6" aria-expanded="false"><span class="accordion-title">What
                                 devices are supported?</span><span class="icon" aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>For the best experience you should use Recall on desktop (Mac or PC) with our browser
-                                extensions for Chrome or Firefox. We also have mobile apps for iOS and Android which are
-                                currently in Beta. </p>
-
-
+                            <p>For the best experience, use ScholarFlow on desktop (Mac or PC) with our browser extensions for Chrome or Firefox. Our extension is built with pure JavaScript for maximum performance and privacy. Mobile apps for iOS and Android are currently in Beta.</p>
                         </div>
                     </div>
                     <div class="accordion-item">
-                        <button id="accordion-button-5" aria-expanded="false"><span class="accordion-title">How is
-                                recall different from other content summarization tools?</span><span class="icon"
+                        <button id="accordion-button-7" aria-expanded="false"><span class="accordion-title">How is
+                                ScholarFlow different from other productivity tools?</span><span class="icon"
                                 aria-hidden="true"></span></button>
                         <div class="accordion-content">
-                            <p>Recall has a personal knowledge base where you can save your summaries. The summaries are
-                                automatically categorized and when you save a new summary, Recall finds relations with
-                                past content you have saved, helping you resurface information that you may have
-                                forgotten about</p>
-
-
+                            <p>Unlike other tools that just track time or store notes, ScholarFlow combines productivity analytics with knowledge preservation. We're built on a decentralized stack (IPFS + Blockchain) that gives you true ownership of your data. Our focus is specifically on researchers who need to analyze and preserve their digital knowledge trail over time.</p>
                         </div>
                     </div>
                 </div>
@@ -209,32 +183,25 @@
     </section>
 
     <!-- About US -->
-    <!-- <section id="aboutus"></section> -->
     <section class="about-section" id="about-us">
         <h2>About Us</h2>
-        <p class="sub-title">Welcome to <strong style="color: #4a4aff;">Recall</strong> – your smart companion for
-            effortless online
-            reading.</p>
-        <p class="sub-header-2">Our Chrome Extension helps you save time and stay informed by providing quick, concise
-            summaries of the
-            content you browse daily. Whether you're reading a news article, scrolling social media, watching YouTube
-            videos, or exploring any webpage – Recall gives you the core insights in seconds, along with a direct
-            reference link.</p>
+        <p class="sub-title">Welcome to <strong style="color: #4a4aff;">ScholarFlow</strong> – the decentralized productivity platform for researchers.</p>
+        <p class="sub-header-2">Our browser extension doesn't just track your online activity - it transforms it into actionable insights. Whether you're reviewing research papers, watching academic videos, or exploring scholarly articles, ScholarFlow analyzes your focus patterns, creates AI-powered summaries, and preserves everything securely on IPFS with blockchain verification.</p>
 
         <div class="features">
             <div class="feature-item">
-                <div class="feature-title"><span class="feature-icon">🧠</span> AI-Powered Summaries</div>
-                <div class="feature-desc">Instantly understand long or complex content.</div>
+                <div class="feature-title"><span class="feature-icon">📊</span> Productivity Analytics</div>
+                <div class="feature-desc">Track focus scores and receive daily digest reports of your research.</div>
             </div>
 
             <div class="feature-item">
-                <div class="feature-title"><span class="feature-icon">📰</span> Multi-Platform Support</div>
-                <div class="feature-desc">Works with news sites, blogs, YouTube, and social media.</div>
+                <div class="feature-title"><span class="feature-icon">🔍</span> Decentralized Storage</div>
+                <div class="feature-desc">All content stored on IPFS with blockchain verification.</div>
             </div>
 
             <div class="feature-item">
-                <div class="feature-title"><span class="feature-icon">🔗</span> Reference Links Included</div>
-                <div class="feature-desc">Always linked to the original content source.</div>
+                <div class="feature-title"><span class="feature-icon">🧠</span> AI-Powered Knowledge Graphs</div>
+                <div class="feature-desc">Visualize connections between research topics and resources.</div>
             </div>
 
             <div class="feature-item">
@@ -244,8 +211,7 @@
         </div>
 
         <p style="margin-top: 40px;" class="sub-header-2">
-            Whether you're a student, professional, or lifelong learner, Recall helps you digest more in less time.
-            Start summarizing smarter today.
+            Created by researchers for researchers, ScholarFlow helps you turn browsing into breakthroughs with our decentralized, ethical, and human-first approach to knowledge management.
         </p>
     </section>
 
